[project]
name = "fixerio"
version = "1.0.0"
authors = [
  { name="Krzysztof Sroka", email="krzysztof.sroka21@gmail.com" },
]
description = "Fixer.io api"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/xsaren11/fixerio"
Issues = "https://github.com/xsaren11/fixerio/issues"